# csfdScraper

./: db.sqlite3  manage.py  pyproject.toml  readme.md
csfdScraper/: asgi.py  settings.py  urls.py  wsgi.py
csfdScraper/management/commands/: download_data.py
csfdScraper/migrations/: 0001_initial.py  0002_remove_movie_actors_alter_actor_normalized_name_and_more.py  0003_movieactorlink.py
csfdScraper/models/: __init__.py  actor.py  movie.py  movie_actor_link.py
csfdScraper/views/: views.py
templates/: actor_detail.html  input_page.html  movie_detail.html
