[tool.poetry]
name = "csfdscraper"
version = "0.1.0"
description = ""
authors = ["Tomáš Neuschl <tm.neu003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
unidecode = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
